# ETL-pdf-pipepline

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
documents/: api-reference.md
etl_pdf_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: index.html
plans/: etl-pipeline-plan.md  storage-backend-switching.md
scripts/: flush_data.py  reprocess_markdown.py  run_api.py  run_pipeline.py  run_pipeline.sh  serve_frontend.py  view_lancedb.py
src/: __init__.py  config.py  exceptions.py  logging_config.py  models.py  pipeline.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routes/: __init__.py  chunks.py  documents.py  images.py  search.py  stats.py
src/extract/: __init__.py  google_vision_extractor.py  image_extractor.py  pymupdf_extractor.py  validator.py
src/load/: __init__.py  lancedb_store.py  sqlite_store.py
src/retrieve/: __init__.py  hybrid_retriever.py
src/transform/: __init__.py  chunker.py  embedder.py  markdown_parser.py
